y.output
Terminals unused in grammar

   T_puts
   T_opencurly
   T_closecurly
   T_exp
   T_expas
   T_modas
   T_true
   T_false
   T_inrange
   T_exrange


Grammar

    0 $accept: line $end

    1 line: expression
    2     | line expression
    3     | statement
    4     | line statement
    5     | error '\n'

    6 expression: conditionalExp

    7 operatorExp: operatorExp T_mul operatorExp
    8            | operatorExp T_div operatorExp
    9            | operatorExp T_plus operatorExp
   10            | operatorExp T_minus operatorExp
   11            | operatorExp T_mod operatorExp
   12            | operatorExp T_ccomp operatorExp
   13            | term

   14 relationalExp: relationalExp T_lt relationalExp
   15              | relationalExp T_gt relationalExp
   16              | relationalExp T_lte relationalExp
   17              | relationalExp T_gte relationalExp
   18              | relationalExp T_comp relationalExp
   19              | relationalExp T_ne relationalExp
   20              | operatorExp

   21 arrayExp: T_openbox numList T_closebox

   22 numList: intList
   23        | fltList

   24 intList: T_int T_comma intList
   25        | T_int

   26 fltList: T_flt T_comma fltList
   27        | T_flt

   28 assignmentExp: T_id T_asop conditionalExp
   29              | T_id T_asop arrayExp
   30              | T_id T_asop T_string
   31              | T_id T_addas term
   32              | T_id T_subas term
   33              | T_id T_mulas term
   34              | T_id T_divas term

   35 conditionalExp: relationalExp
   36               | conditionalExp T_and conditionalExp
   37               | conditionalExp T_or conditionalExp
   38               | T_not conditionalExp

   39 statement: T_return term
   40          | iterStat
   41          | selStat
   42          | assignmentExp
   43          | functionStat
   44          | classStat

   45 term: term1
   46     | term2

   47 term1: T_int
   48      | T_openpar operatorExp T_closepar
   49      | T_flt

   50 term2: T_id

   51 iterStat: T_while conditionalExp T_do whileExp T_end
   52         | T_begin whileExp T_end T_while conditionalExp

   53 whileExp: statement whileExp
   54         | %empty

   55 selStat: T_case T_id whenStat T_end

   56 whenStat: T_when term whenExp whenOptional

   57 whenExp: statement whenExpOpt

   58 whenOptional: T_else whenExp
   59             | whenStat
   60             | %empty

   61 whenExpOpt: whenExp
   62           | %empty

   63 functionStat: T_def T_id T_openpar T_id T_closepar funcExp T_end

   64 funcExp: statement funcExp2

   65 funcExp2: funcExp
   66         | %empty

   67 classStat: T_class T_id classExp T_end

   68 classExp: statement classExp2

   69 classExp2: classExp
   70          | %empty


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 5
error (256) 5
T_int (258) 24 25 47
T_flt (259) 26 27 49
T_id (260) 28 29 30 31 32 33 34 50 55 63 67
T_string (261) 30
T_puts (262)
T_do (263) 51
T_end (264) 51 52 55 63 67
T_begin (265) 52
T_when (266) 56
T_case (267) 55
T_while (268) 51 52
T_else (269) 58
T_return (270) 39
T_def (271) 63
T_class (272) 67
T_plus (273) 9
T_minus (274) 10
T_mul (275) 7
T_div (276) 8
T_mod (277) 11
T_openpar (278) 48 63
T_closepar (279) 48 63
T_opencurly (280)
T_closecurly (281)
T_openbox (282) 21
T_closebox (283) 21
T_asop (284) 28 29 30
T_exp (285)
T_comp (286) 18
T_gt (287) 15
T_lt (288) 14
T_gte (289) 17
T_lte (290) 16
T_ne (291) 19
T_ccomp (292) 12
T_expas (293)
T_addas (294) 31
T_subas (295) 32
T_mulas (296) 33
T_divas (297) 34
T_modas (298)
T_and (299) 36
T_or (300) 37
T_not (301) 38
T_comma (302) 24 26
T_true (303)
T_false (304)
T_inrange (305)
T_exrange (306)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
line (54)
    on left: 1 2 3 4 5, on right: 0 2 4
expression (55)
    on left: 6, on right: 1 2
operatorExp (56)
    on left: 7 8 9 10 11 12 13, on right: 7 8 9 10 11 12 20 48
relationalExp (57)
    on left: 14 15 16 17 18 19 20, on right: 14 15 16 17 18 19 35
arrayExp (58)
    on left: 21, on right: 29
numList (59)
    on left: 22 23, on right: 21
intList (60)
    on left: 24 25, on right: 22 24
fltList (61)
    on left: 26 27, on right: 23 26
assignmentExp (62)
    on left: 28 29 30 31 32 33 34, on right: 42
conditionalExp (63)
    on left: 35 36 37 38, on right: 6 28 36 37 38 51 52
statement (64)
    on left: 39 40 41 42 43 44, on right: 3 4 53 57 64 68
term (65)
    on left: 45 46, on right: 13 31 32 33 34 39 56
term1 (66)
    on left: 47 48 49, on right: 45
term2 (67)
    on left: 50, on right: 46
iterStat (68)
    on left: 51 52, on right: 40
whileExp (69)
    on left: 53 54, on right: 51 52 53
selStat (70)
    on left: 55, on right: 41
whenStat (71)
    on left: 56, on right: 55 59
whenExp (72)
    on left: 57, on right: 56 58 61
whenOptional (73)
    on left: 58 59 60, on right: 56
whenExpOpt (74)
    on left: 61 62, on right: 57
functionStat (75)
    on left: 63, on right: 43
funcExp (76)
    on left: 64, on right: 63 65
funcExp2 (77)
    on left: 65 66, on right: 64
classStat (78)
    on left: 67, on right: 44
classExp (79)
    on left: 68, on right: 67 69
classExp2 (80)
    on left: 69 70, on right: 68


State 0

    0 $accept: . line $end

    error      shift, and go to state 1
    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 4
    T_begin    shift, and go to state 5
    T_case     shift, and go to state 6
    T_while    shift, and go to state 7
    T_return   shift, and go to state 8
    T_def      shift, and go to state 9
    T_class    shift, and go to state 10
    T_openpar  shift, and go to state 11
    T_not      shift, and go to state 12

    line            go to state 13
    expression      go to state 14
    operatorExp     go to state 15
    relationalExp   go to state 16
    assignmentExp   go to state 17
    conditionalExp  go to state 18
    statement       go to state 19
    term            go to state 20
    term1           go to state 21
    term2           go to state 22
    iterStat        go to state 23
    selStat         go to state 24
    functionStat    go to state 25
    classStat       go to state 26


State 1

    5 line: error . '\n'

    '\n'  shift, and go to state 27


State 2

   47 term1: T_int .

    $default  reduce using rule 47 (term1)


State 3

   49 term1: T_flt .

    $default  reduce using rule 49 (term1)


State 4

   28 assignmentExp: T_id . T_asop conditionalExp
   29              | T_id . T_asop arrayExp
   30              | T_id . T_asop T_string
   31              | T_id . T_addas term
   32              | T_id . T_subas term
   33              | T_id . T_mulas term
   34              | T_id . T_divas term
   50 term2: T_id .

    T_asop   shift, and go to state 28
    T_addas  shift, and go to state 29
    T_subas  shift, and go to state 30
    T_mulas  shift, and go to state 31
    T_divas  shift, and go to state 32

    $default  reduce using rule 50 (term2)


State 5

   52 iterStat: T_begin . whileExp T_end T_while conditionalExp

    T_id      shift, and go to state 33
    T_begin   shift, and go to state 5
    T_case    shift, and go to state 6
    T_while   shift, and go to state 7
    T_return  shift, and go to state 8
    T_def     shift, and go to state 9
    T_class   shift, and go to state 10

    $default  reduce using rule 54 (whileExp)

    assignmentExp  go to state 17
    statement      go to state 34
    iterStat       go to state 23
    whileExp       go to state 35
    selStat        go to state 24
    functionStat   go to state 25
    classStat      go to state 26


State 6

   55 selStat: T_case . T_id whenStat T_end

    T_id  shift, and go to state 36


State 7

   51 iterStat: T_while . conditionalExp T_do whileExp T_end

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11
    T_not      shift, and go to state 12

    operatorExp     go to state 15
    relationalExp   go to state 16
    conditionalExp  go to state 38
    term            go to state 20
    term1           go to state 21
    term2           go to state 22


State 8

   39 statement: T_return . term

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    term   go to state 39
    term1  go to state 21
    term2  go to state 22


State 9

   63 functionStat: T_def . T_id T_openpar T_id T_closepar funcExp T_end

    T_id  shift, and go to state 40


State 10

   67 classStat: T_class . T_id classExp T_end

    T_id  shift, and go to state 41


State 11

   48 term1: T_openpar . operatorExp T_closepar

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp  go to state 42
    term         go to state 20
    term1        go to state 21
    term2        go to state 22


State 12

   38 conditionalExp: T_not . conditionalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11
    T_not      shift, and go to state 12

    operatorExp     go to state 15
    relationalExp   go to state 16
    conditionalExp  go to state 43
    term            go to state 20
    term1           go to state 21
    term2           go to state 22


State 13

    0 $accept: line . $end
    2 line: line . expression
    4     | line . statement

    $end       shift, and go to state 44
    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 4
    T_begin    shift, and go to state 5
    T_case     shift, and go to state 6
    T_while    shift, and go to state 7
    T_return   shift, and go to state 8
    T_def      shift, and go to state 9
    T_class    shift, and go to state 10
    T_openpar  shift, and go to state 11
    T_not      shift, and go to state 12

    expression      go to state 45
    operatorExp     go to state 15
    relationalExp   go to state 16
    assignmentExp   go to state 17
    conditionalExp  go to state 18
    statement       go to state 46
    term            go to state 20
    term1           go to state 21
    term2           go to state 22
    iterStat        go to state 23
    selStat         go to state 24
    functionStat    go to state 25
    classStat       go to state 26


State 14

    1 line: expression .

    $default  reduce using rule 1 (line)


State 15

    7 operatorExp: operatorExp . T_mul operatorExp
    8            | operatorExp . T_div operatorExp
    9            | operatorExp . T_plus operatorExp
   10            | operatorExp . T_minus operatorExp
   11            | operatorExp . T_mod operatorExp
   12            | operatorExp . T_ccomp operatorExp
   20 relationalExp: operatorExp .

    T_plus   shift, and go to state 47
    T_minus  shift, and go to state 48
    T_mul    shift, and go to state 49
    T_div    shift, and go to state 50
    T_mod    shift, and go to state 51
    T_ccomp  shift, and go to state 52

    $default  reduce using rule 20 (relationalExp)


State 16

   14 relationalExp: relationalExp . T_lt relationalExp
   15              | relationalExp . T_gt relationalExp
   16              | relationalExp . T_lte relationalExp
   17              | relationalExp . T_gte relationalExp
   18              | relationalExp . T_comp relationalExp
   19              | relationalExp . T_ne relationalExp
   35 conditionalExp: relationalExp .

    T_comp  shift, and go to state 53
    T_gt    shift, and go to state 54
    T_lt    shift, and go to state 55
    T_gte   shift, and go to state 56
    T_lte   shift, and go to state 57
    T_ne    shift, and go to state 58

    $default  reduce using rule 35 (conditionalExp)


State 17

   42 statement: assignmentExp .

    $default  reduce using rule 42 (statement)


State 18

    6 expression: conditionalExp .
   36 conditionalExp: conditionalExp . T_and conditionalExp
   37               | conditionalExp . T_or conditionalExp

    T_and  shift, and go to state 59
    T_or   shift, and go to state 60

    $default  reduce using rule 6 (expression)


State 19

    3 line: statement .

    $default  reduce using rule 3 (line)


State 20

   13 operatorExp: term .

    $default  reduce using rule 13 (operatorExp)


State 21

   45 term: term1 .

    $default  reduce using rule 45 (term)


State 22

   46 term: term2 .

    $default  reduce using rule 46 (term)


State 23

   40 statement: iterStat .

    $default  reduce using rule 40 (statement)


State 24

   41 statement: selStat .

    $default  reduce using rule 41 (statement)


State 25

   43 statement: functionStat .

    $default  reduce using rule 43 (statement)


State 26

   44 statement: classStat .

    $default  reduce using rule 44 (statement)


State 27

    5 line: error '\n' .

    $default  reduce using rule 5 (line)


State 28

   28 assignmentExp: T_id T_asop . conditionalExp
   29              | T_id T_asop . arrayExp
   30              | T_id T_asop . T_string

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_string   shift, and go to state 61
    T_openpar  shift, and go to state 11
    T_openbox  shift, and go to state 62
    T_not      shift, and go to state 12

    operatorExp     go to state 15
    relationalExp   go to state 16
    arrayExp        go to state 63
    conditionalExp  go to state 64
    term            go to state 20
    term1           go to state 21
    term2           go to state 22


State 29

   31 assignmentExp: T_id T_addas . term

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    term   go to state 65
    term1  go to state 21
    term2  go to state 22


State 30

   32 assignmentExp: T_id T_subas . term

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    term   go to state 66
    term1  go to state 21
    term2  go to state 22


State 31

   33 assignmentExp: T_id T_mulas . term

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    term   go to state 67
    term1  go to state 21
    term2  go to state 22


State 32

   34 assignmentExp: T_id T_divas . term

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    term   go to state 68
    term1  go to state 21
    term2  go to state 22


State 33

   28 assignmentExp: T_id . T_asop conditionalExp
   29              | T_id . T_asop arrayExp
   30              | T_id . T_asop T_string
   31              | T_id . T_addas term
   32              | T_id . T_subas term
   33              | T_id . T_mulas term
   34              | T_id . T_divas term

    T_asop   shift, and go to state 28
    T_addas  shift, and go to state 29
    T_subas  shift, and go to state 30
    T_mulas  shift, and go to state 31
    T_divas  shift, and go to state 32


State 34

   53 whileExp: statement . whileExp

    T_id      shift, and go to state 33
    T_begin   shift, and go to state 5
    T_case    shift, and go to state 6
    T_while   shift, and go to state 7
    T_return  shift, and go to state 8
    T_def     shift, and go to state 9
    T_class   shift, and go to state 10

    $default  reduce using rule 54 (whileExp)

    assignmentExp  go to state 17
    statement      go to state 34
    iterStat       go to state 23
    whileExp       go to state 69
    selStat        go to state 24
    functionStat   go to state 25
    classStat      go to state 26


State 35

   52 iterStat: T_begin whileExp . T_end T_while conditionalExp

    T_end  shift, and go to state 70


State 36

   55 selStat: T_case T_id . whenStat T_end

    T_when  shift, and go to state 71

    whenStat  go to state 72


State 37

   50 term2: T_id .

    $default  reduce using rule 50 (term2)


State 38

   36 conditionalExp: conditionalExp . T_and conditionalExp
   37               | conditionalExp . T_or conditionalExp
   51 iterStat: T_while conditionalExp . T_do whileExp T_end

    T_do   shift, and go to state 73
    T_and  shift, and go to state 59
    T_or   shift, and go to state 60


State 39

   39 statement: T_return term .

    $default  reduce using rule 39 (statement)


State 40

   63 functionStat: T_def T_id . T_openpar T_id T_closepar funcExp T_end

    T_openpar  shift, and go to state 74


State 41

   67 classStat: T_class T_id . classExp T_end

    T_id      shift, and go to state 33
    T_begin   shift, and go to state 5
    T_case    shift, and go to state 6
    T_while   shift, and go to state 7
    T_return  shift, and go to state 8
    T_def     shift, and go to state 9
    T_class   shift, and go to state 10

    assignmentExp  go to state 17
    statement      go to state 75
    iterStat       go to state 23
    selStat        go to state 24
    functionStat   go to state 25
    classStat      go to state 26
    classExp       go to state 76


State 42

    7 operatorExp: operatorExp . T_mul operatorExp
    8            | operatorExp . T_div operatorExp
    9            | operatorExp . T_plus operatorExp
   10            | operatorExp . T_minus operatorExp
   11            | operatorExp . T_mod operatorExp
   12            | operatorExp . T_ccomp operatorExp
   48 term1: T_openpar operatorExp . T_closepar

    T_plus      shift, and go to state 47
    T_minus     shift, and go to state 48
    T_mul       shift, and go to state 49
    T_div       shift, and go to state 50
    T_mod       shift, and go to state 51
    T_closepar  shift, and go to state 77
    T_ccomp     shift, and go to state 52


State 43

   36 conditionalExp: conditionalExp . T_and conditionalExp
   37               | conditionalExp . T_or conditionalExp
   38               | T_not conditionalExp .

    T_and  shift, and go to state 59
    T_or   shift, and go to state 60

    $default  reduce using rule 38 (conditionalExp)


State 44

    0 $accept: line $end .

    $default  accept


State 45

    2 line: line expression .

    $default  reduce using rule 2 (line)


State 46

    4 line: line statement .

    $default  reduce using rule 4 (line)


State 47

    9 operatorExp: operatorExp T_plus . operatorExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp  go to state 78
    term         go to state 20
    term1        go to state 21
    term2        go to state 22


State 48

   10 operatorExp: operatorExp T_minus . operatorExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp  go to state 79
    term         go to state 20
    term1        go to state 21
    term2        go to state 22


State 49

    7 operatorExp: operatorExp T_mul . operatorExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp  go to state 80
    term         go to state 20
    term1        go to state 21
    term2        go to state 22


State 50

    8 operatorExp: operatorExp T_div . operatorExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp  go to state 81
    term         go to state 20
    term1        go to state 21
    term2        go to state 22


State 51

   11 operatorExp: operatorExp T_mod . operatorExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp  go to state 82
    term         go to state 20
    term1        go to state 21
    term2        go to state 22


State 52

   12 operatorExp: operatorExp T_ccomp . operatorExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp  go to state 83
    term         go to state 20
    term1        go to state 21
    term2        go to state 22


State 53

   18 relationalExp: relationalExp T_comp . relationalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp    go to state 15
    relationalExp  go to state 84
    term           go to state 20
    term1          go to state 21
    term2          go to state 22


State 54

   15 relationalExp: relationalExp T_gt . relationalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp    go to state 15
    relationalExp  go to state 85
    term           go to state 20
    term1          go to state 21
    term2          go to state 22


State 55

   14 relationalExp: relationalExp T_lt . relationalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp    go to state 15
    relationalExp  go to state 86
    term           go to state 20
    term1          go to state 21
    term2          go to state 22


State 56

   17 relationalExp: relationalExp T_gte . relationalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp    go to state 15
    relationalExp  go to state 87
    term           go to state 20
    term1          go to state 21
    term2          go to state 22


State 57

   16 relationalExp: relationalExp T_lte . relationalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp    go to state 15
    relationalExp  go to state 88
    term           go to state 20
    term1          go to state 21
    term2          go to state 22


State 58

   19 relationalExp: relationalExp T_ne . relationalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    operatorExp    go to state 15
    relationalExp  go to state 89
    term           go to state 20
    term1          go to state 21
    term2          go to state 22


State 59

   36 conditionalExp: conditionalExp T_and . conditionalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11
    T_not      shift, and go to state 12

    operatorExp     go to state 15
    relationalExp   go to state 16
    conditionalExp  go to state 90
    term            go to state 20
    term1           go to state 21
    term2           go to state 22


State 60

   37 conditionalExp: conditionalExp T_or . conditionalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11
    T_not      shift, and go to state 12

    operatorExp     go to state 15
    relationalExp   go to state 16
    conditionalExp  go to state 91
    term            go to state 20
    term1           go to state 21
    term2           go to state 22


State 61

   30 assignmentExp: T_id T_asop T_string .

    $default  reduce using rule 30 (assignmentExp)


State 62

   21 arrayExp: T_openbox . numList T_closebox

    T_int  shift, and go to state 92
    T_flt  shift, and go to state 93

    numList  go to state 94
    intList  go to state 95
    fltList  go to state 96


State 63

   29 assignmentExp: T_id T_asop arrayExp .

    $default  reduce using rule 29 (assignmentExp)


State 64

   28 assignmentExp: T_id T_asop conditionalExp .
   36 conditionalExp: conditionalExp . T_and conditionalExp
   37               | conditionalExp . T_or conditionalExp

    T_and  shift, and go to state 59
    T_or   shift, and go to state 60

    $default  reduce using rule 28 (assignmentExp)


State 65

   31 assignmentExp: T_id T_addas term .

    $default  reduce using rule 31 (assignmentExp)


State 66

   32 assignmentExp: T_id T_subas term .

    $default  reduce using rule 32 (assignmentExp)


State 67

   33 assignmentExp: T_id T_mulas term .

    $default  reduce using rule 33 (assignmentExp)


State 68

   34 assignmentExp: T_id T_divas term .

    $default  reduce using rule 34 (assignmentExp)


State 69

   53 whileExp: statement whileExp .

    $default  reduce using rule 53 (whileExp)


State 70

   52 iterStat: T_begin whileExp T_end . T_while conditionalExp

    T_while  shift, and go to state 97


State 71

   56 whenStat: T_when . term whenExp whenOptional

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11

    term   go to state 98
    term1  go to state 21
    term2  go to state 22


State 72

   55 selStat: T_case T_id whenStat . T_end

    T_end  shift, and go to state 99


State 73

   51 iterStat: T_while conditionalExp T_do . whileExp T_end

    T_id      shift, and go to state 33
    T_begin   shift, and go to state 5
    T_case    shift, and go to state 6
    T_while   shift, and go to state 7
    T_return  shift, and go to state 8
    T_def     shift, and go to state 9
    T_class   shift, and go to state 10

    $default  reduce using rule 54 (whileExp)

    assignmentExp  go to state 17
    statement      go to state 34
    iterStat       go to state 23
    whileExp       go to state 100
    selStat        go to state 24
    functionStat   go to state 25
    classStat      go to state 26


State 74

   63 functionStat: T_def T_id T_openpar . T_id T_closepar funcExp T_end

    T_id  shift, and go to state 101


State 75

   68 classExp: statement . classExp2

    T_id      shift, and go to state 33
    T_begin   shift, and go to state 5
    T_case    shift, and go to state 6
    T_while   shift, and go to state 7
    T_return  shift, and go to state 8
    T_def     shift, and go to state 9
    T_class   shift, and go to state 10

    $default  reduce using rule 70 (classExp2)

    assignmentExp  go to state 17
    statement      go to state 75
    iterStat       go to state 23
    selStat        go to state 24
    functionStat   go to state 25
    classStat      go to state 26
    classExp       go to state 102
    classExp2      go to state 103


State 76

   67 classStat: T_class T_id classExp . T_end

    T_end  shift, and go to state 104


State 77

   48 term1: T_openpar operatorExp T_closepar .

    $default  reduce using rule 48 (term1)


State 78

    7 operatorExp: operatorExp . T_mul operatorExp
    8            | operatorExp . T_div operatorExp
    9            | operatorExp . T_plus operatorExp
    9            | operatorExp T_plus operatorExp .
   10            | operatorExp . T_minus operatorExp
   11            | operatorExp . T_mod operatorExp
   12            | operatorExp . T_ccomp operatorExp

    T_mul    shift, and go to state 49
    T_div    shift, and go to state 50
    T_mod    shift, and go to state 51
    T_ccomp  shift, and go to state 52

    $default  reduce using rule 9 (operatorExp)


State 79

    7 operatorExp: operatorExp . T_mul operatorExp
    8            | operatorExp . T_div operatorExp
    9            | operatorExp . T_plus operatorExp
   10            | operatorExp . T_minus operatorExp
   10            | operatorExp T_minus operatorExp .
   11            | operatorExp . T_mod operatorExp
   12            | operatorExp . T_ccomp operatorExp

    T_mul    shift, and go to state 49
    T_div    shift, and go to state 50
    T_mod    shift, and go to state 51
    T_ccomp  shift, and go to state 52

    $default  reduce using rule 10 (operatorExp)


State 80

    7 operatorExp: operatorExp . T_mul operatorExp
    7            | operatorExp T_mul operatorExp .
    8            | operatorExp . T_div operatorExp
    9            | operatorExp . T_plus operatorExp
   10            | operatorExp . T_minus operatorExp
   11            | operatorExp . T_mod operatorExp
   12            | operatorExp . T_ccomp operatorExp

    T_ccomp  shift, and go to state 52

    $default  reduce using rule 7 (operatorExp)


State 81

    7 operatorExp: operatorExp . T_mul operatorExp
    8            | operatorExp . T_div operatorExp
    8            | operatorExp T_div operatorExp .
    9            | operatorExp . T_plus operatorExp
   10            | operatorExp . T_minus operatorExp
   11            | operatorExp . T_mod operatorExp
   12            | operatorExp . T_ccomp operatorExp

    T_ccomp  shift, and go to state 52

    $default  reduce using rule 8 (operatorExp)


State 82

    7 operatorExp: operatorExp . T_mul operatorExp
    8            | operatorExp . T_div operatorExp
    9            | operatorExp . T_plus operatorExp
   10            | operatorExp . T_minus operatorExp
   11            | operatorExp . T_mod operatorExp
   11            | operatorExp T_mod operatorExp .
   12            | operatorExp . T_ccomp operatorExp

    T_ccomp  shift, and go to state 52

    $default  reduce using rule 11 (operatorExp)


State 83

    7 operatorExp: operatorExp . T_mul operatorExp
    8            | operatorExp . T_div operatorExp
    9            | operatorExp . T_plus operatorExp
   10            | operatorExp . T_minus operatorExp
   11            | operatorExp . T_mod operatorExp
   12            | operatorExp . T_ccomp operatorExp
   12            | operatorExp T_ccomp operatorExp .

    $default  reduce using rule 12 (operatorExp)


State 84

   14 relationalExp: relationalExp . T_lt relationalExp
   15              | relationalExp . T_gt relationalExp
   16              | relationalExp . T_lte relationalExp
   17              | relationalExp . T_gte relationalExp
   18              | relationalExp . T_comp relationalExp
   18              | relationalExp T_comp relationalExp .
   19              | relationalExp . T_ne relationalExp

    $default  reduce using rule 18 (relationalExp)


State 85

   14 relationalExp: relationalExp . T_lt relationalExp
   15              | relationalExp . T_gt relationalExp
   15              | relationalExp T_gt relationalExp .
   16              | relationalExp . T_lte relationalExp
   17              | relationalExp . T_gte relationalExp
   18              | relationalExp . T_comp relationalExp
   19              | relationalExp . T_ne relationalExp

    T_comp  shift, and go to state 53
    T_gte   shift, and go to state 56
    T_lte   shift, and go to state 57
    T_ne    shift, and go to state 58

    $default  reduce using rule 15 (relationalExp)


State 86

   14 relationalExp: relationalExp . T_lt relationalExp
   14              | relationalExp T_lt relationalExp .
   15              | relationalExp . T_gt relationalExp
   16              | relationalExp . T_lte relationalExp
   17              | relationalExp . T_gte relationalExp
   18              | relationalExp . T_comp relationalExp
   19              | relationalExp . T_ne relationalExp

    T_comp  shift, and go to state 53
    T_gte   shift, and go to state 56
    T_lte   shift, and go to state 57
    T_ne    shift, and go to state 58

    $default  reduce using rule 14 (relationalExp)


State 87

   14 relationalExp: relationalExp . T_lt relationalExp
   15              | relationalExp . T_gt relationalExp
   16              | relationalExp . T_lte relationalExp
   17              | relationalExp . T_gte relationalExp
   17              | relationalExp T_gte relationalExp .
   18              | relationalExp . T_comp relationalExp
   19              | relationalExp . T_ne relationalExp

    $default  reduce using rule 17 (relationalExp)


State 88

   14 relationalExp: relationalExp . T_lt relationalExp
   15              | relationalExp . T_gt relationalExp
   16              | relationalExp . T_lte relationalExp
   16              | relationalExp T_lte relationalExp .
   17              | relationalExp . T_gte relationalExp
   18              | relationalExp . T_comp relationalExp
   19              | relationalExp . T_ne relationalExp

    $default  reduce using rule 16 (relationalExp)


State 89

   14 relationalExp: relationalExp . T_lt relationalExp
   15              | relationalExp . T_gt relationalExp
   16              | relationalExp . T_lte relationalExp
   17              | relationalExp . T_gte relationalExp
   18              | relationalExp . T_comp relationalExp
   19              | relationalExp . T_ne relationalExp
   19              | relationalExp T_ne relationalExp .

    $default  reduce using rule 19 (relationalExp)


State 90

   36 conditionalExp: conditionalExp . T_and conditionalExp
   36               | conditionalExp T_and conditionalExp .
   37               | conditionalExp . T_or conditionalExp

    T_or  shift, and go to state 60

    $default  reduce using rule 36 (conditionalExp)


State 91

   36 conditionalExp: conditionalExp . T_and conditionalExp
   37               | conditionalExp . T_or conditionalExp
   37               | conditionalExp T_or conditionalExp .

    $default  reduce using rule 37 (conditionalExp)


State 92

   24 intList: T_int . T_comma intList
   25        | T_int .

    T_comma  shift, and go to state 105

    $default  reduce using rule 25 (intList)


State 93

   26 fltList: T_flt . T_comma fltList
   27        | T_flt .

    T_comma  shift, and go to state 106

    $default  reduce using rule 27 (fltList)


State 94

   21 arrayExp: T_openbox numList . T_closebox

    T_closebox  shift, and go to state 107


State 95

   22 numList: intList .

    $default  reduce using rule 22 (numList)


State 96

   23 numList: fltList .

    $default  reduce using rule 23 (numList)


State 97

   52 iterStat: T_begin whileExp T_end T_while . conditionalExp

    T_int      shift, and go to state 2
    T_flt      shift, and go to state 3
    T_id       shift, and go to state 37
    T_openpar  shift, and go to state 11
    T_not      shift, and go to state 12

    operatorExp     go to state 15
    relationalExp   go to state 16
    conditionalExp  go to state 108
    term            go to state 20
    term1           go to state 21
    term2           go to state 22


State 98

   56 whenStat: T_when term . whenExp whenOptional

    T_id      shift, and go to state 33
    T_begin   shift, and go to state 5
    T_case    shift, and go to state 6
    T_while   shift, and go to state 7
    T_return  shift, and go to state 8
    T_def     shift, and go to state 9
    T_class   shift, and go to state 10

    assignmentExp  go to state 17
    statement      go to state 109
    iterStat       go to state 23
    selStat        go to state 24
    whenExp        go to state 110
    functionStat   go to state 25
    classStat      go to state 26


State 99

   55 selStat: T_case T_id whenStat T_end .

    $default  reduce using rule 55 (selStat)


State 100

   51 iterStat: T_while conditionalExp T_do whileExp . T_end

    T_end  shift, and go to state 111


State 101

   63 functionStat: T_def T_id T_openpar T_id . T_closepar funcExp T_end

    T_closepar  shift, and go to state 112


State 102

   69 classExp2: classExp .

    $default  reduce using rule 69 (classExp2)


State 103

   68 classExp: statement classExp2 .

    $default  reduce using rule 68 (classExp)


State 104

   67 classStat: T_class T_id classExp T_end .

    $default  reduce using rule 67 (classStat)


State 105

   24 intList: T_int T_comma . intList

    T_int  shift, and go to state 92

    intList  go to state 113


State 106

   26 fltList: T_flt T_comma . fltList

    T_flt  shift, and go to state 93

    fltList  go to state 114


State 107

   21 arrayExp: T_openbox numList T_closebox .

    $default  reduce using rule 21 (arrayExp)


State 108
